--- a/frontend/src/styles/question.css
+++ b/frontend/src/styles/question.css
@@ -14,35 +14,36 @@
   gap: 40px;
 }
 
-.category-display {
-  height: 35px;
-  max-width: 90vw;
+.category__control {
+  max-width: 60vw;
+  min-width: 20vw;
+  height: 8vh;
   background-color: #F7B32B;
   color: white;
   border: 2px solid white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4), 0 6px 6px rgba(0, 0, 0, 0.7);
-  padding: 6px 15px;
-  font-size: 22px;
+  padding: 6px;
+  font-size: 18px;
   font-family: cursive;
   cursor: pointer;
   transition: box-shadow 0.25s ease;
   border-radius: 10px;
 }
 
-.complexity-display {
-  width: 120px;
-  height: 35px;
+.complexity__control {
+  width: 10vw;
+  height: 8vh;
   background-color: #F7B32B;
-  color: white;
   border: 2px solid white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4), 0 6px 6px rgba(0, 0, 0, 0.7);
-  padding: 6px 15px;
-  font-size: 22px;
+  padding: 6px;
+  font-size: 18px;
   font-family: cursive;
   cursor: pointer;
   transition: box-shadow 0.25s ease;
   border-radius: 10px;
 }
+
 
 .row2 {
   width: 100%;
@@ -50,12 +51,12 @@
 }
 
 .question-title {
-  max-width: 90vw;
+  width: 90vw;
+  white-space: nowrap; /* Prevents line wrapping */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30vw;
-  height: 50px;
+  height: 40px;
   background-color: #FFFFCC;
   color: black;
   border: 2px solid white;
