--- a/peer-prep-fe/src/components/question-box/question-box.component.css
+++ b/peer-prep-fe/src/components/question-box/question-box.component.css
@@ -25,6 +25,12 @@
     max-width: 600px;
 }
 
+.misc {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
 .edit-icon {
   background-color: transparent;
   border: transparent;
