--- a/peer-prep-fe/src/components/question-box/question-box.component.html
+++ b/peer-prep-fe/src/components/question-box/question-box.component.html
@@ -4,10 +4,10 @@
   </button>
   <div class="misc">
     <button class="delete-icon" (click)="openDeleteModal()">
-      <i class="fa-solid fa-trash fa-2xl" style="color: #ffffff;"></i>
+      <i class="fa-solid fa-trash fa-2xl" style="color: #ffffff; "></i>
     </button>
     <button class="edit-icon" (click)="openEditModal()">
-      <i class="far fa-pencil fa-2x"></i>
+      <i class="fa-solid fa-pencil fa-2xl" style="color: #ffffff;"></i>
     </button>
     <span class="difficulty" [ngClass]="question.question_complexity">{{ question.question_complexity }}</span>
   </div>
