Fix search button styling

--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="search-container">
         <input class="search-bar" type="search" placeholder="Search..." [(ngModel)]="searchTerm" />
-        <button type="submit" (click)="searchQuestions()">
+        <button type="submit" class="search-button" (click)="searchQuestions()">
             <i class="fa-solid fa-magnifying-glass search-icon"> </i>
         </button>
     </div>
