--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.css
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.css
@@ -19,31 +19,40 @@
     font-size: 22px;
     background-color: transparent;  
     border: 1px solid white;
-    padding: 3px 40px 3px 40px;
+    padding: 2px 40px 6px 40px;
+    margin-right: 10px;
     /* margin-left: 10px; */
     border-radius: 10px;
     width: 400px;
     text-transform: uppercase;
 }
 
+.search-button {
+    background-color: transparent;
+    border-radius: 10px;
+}
+
 .search-icon {
     /* position: absolute;  */
     /* top: 50%;  */
     /* transform: translateY(-50%);  */
-    color: white; 
+    /* color: white;  */
+    background-color: transparent;
     pointer-events: none; 
 }
 
 button[type="submit"] {
     /* text-indent: -999px; */
     overflow: hidden;
+    color: white;
     width: 40px;
+    height: 40px;
     padding: 0;
     margin: 0;
     /* border: 1px solid transparent; */
-    border-radius: inherit;
+    border-radius: 10px;
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 1;
   }
   
 button[type="submit"]:hover {
