--- a/frontend/src/styles/question.css
+++ b/frontend/src/styles/question.css
@@ -31,7 +31,7 @@
 }
 
 .complexity__control {
-  width: 10vw;
+  min-width: 150px;
   height: 8vh;
   background-color: #F7B32B;
   border: 2px solid white;
