--- a/apps/question-service/src/app/question/[id]/styles.scss
+++ b/apps/question-service/src/app/question/[id]/styles.scss
@@ -1,6 +1,6 @@
 // start of code editor classes
 .code-editor-layout {
-  background: white;
+  background: white !important;
   height: 97vh;
   overflow: hidden;
 }
@@ -12,10 +12,15 @@
 
 .entire-page {
   flex: 1;
+  padding: 1rem;
 }
 
 .problem-description {
-  height: 66%;
+  height: 70%;
+}
+
+.code-editor {
+  height: 100.5% !important;
 }
 
 .test-cases {
@@ -23,15 +28,11 @@
 }
 
 .session-details {
-  height: 24%;
+  height: 20%;
 }
 
 .chat-box {
-  height: 72%;
-}
-
-.col-boxes {
-  margin: -4px;
+  height: 80%;
 }
 
 .boxes {
@@ -46,7 +47,7 @@
   height: 100%;
   overflow: auto;
   margin-left: 5px;
-  
+  padding: 8px;
 }
 
 .problem-description-top {
@@ -69,6 +70,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 8px;
 }
 
 .test-cases-top {
@@ -112,21 +114,19 @@
   flex: 1 1 auto;
 }
 
-.code-editor-box {
-  height: 99%;
-  // flex-direction: column;
-  // display: flex;
-
-  // display: grid; 
-  // grid-template-columns: auto 1fr;
-  // flex: 1;
-}
+// .code-editor-box {
+//   height: 100% !important;
+//   flex-direction: column;
+//   display: flex;
+//   margin-bottom: 4px !important;
+// }
 
 .code-editor-div {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 8px;
 }
 
 .code-editor-title {
@@ -156,6 +156,7 @@
 .language-select {
   display: inline-flex;
   flex-wrap: nowrap;
+  margin-top: 4px;
 }
 
 .submit-solution-button {
@@ -182,6 +183,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 8px;
 }
 
 .end-session-button {
@@ -207,6 +209,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 8px;
 }
 
 .chat-box-top {
@@ -218,4 +221,27 @@
   padding: 0%;
   padding-left: 1%;
   margin: 0%;
+}
+
+.complexity-div {
+  margin: 4px 0;
+}
+
+.topic-label,
+.language-text {
+  font-weight: bold;
+}
+
+.tag-container {
+  margin: 4px 0;
+}
+
+.description-text {
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 1.3;
+}
+
+.session-headers {
+  font-weight: bold;
 }
