--- a/peer-prep-fe/src/app/home/home.component.html
+++ b/peer-prep-fe/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="content">
     <h1>Welcome to PeerPrep.</h1>
     <h2>WHERE YOU FIND YOUR MATCH, MASTER THE CHALLENGE</h2>
-    <div class="button-container">
+    <div *ngIf="!isLoggedIn()" class="button-container">
       <button class="home-button">
         Continue with guest account
       </button>
