--- a/peer-prep-fe/src/app/app.component.css
+++ b/peer-prep-fe/src/app/app.component.css
@@ -1,40 +1,37 @@
-
-.button {
-  display: inline-block;
-  cursor: pointer;
-  color: #f5f5f5;
-  font-family: Arial, sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 6px 10px;
-  text-decoration: none;
-  outline: 0;
-  margin: 0px 1em;
-}
-
-nav {
-  background-color: black;
+.navbar {
+  background-color: rgb(65, 65, 65);
   display: flex;
   flex-direction: row;
   justify-content: start;
-  padding: 10px;
+  margin: 0;
+  width: 100%;
+  height: 5vh;
 }
 
 #header {
   color: #f5f5f5;
   font-family: Arial, sans-serif;
   font-size: 20px;
-  padding: 6px 10px;
   font-weight: bold;
+  width: 150px;
 }
 
-.login-button {
+.button {
   cursor: pointer;
-  color: black;
+  color: #f5f5f5;
+  font-family: Arial, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
   text-decoration: none;
-  border-radius: 10px;
-  border: 1px solid black;
-  padding: 5px 10px;
+  outline: 0;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  width: auto;
+  height: 100%;
+}
+
+.button:hover {
+  background-color: rgb(175, 2, 117);
 }
 
 #container {
@@ -52,5 +49,33 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-} 
+}
+
+.username {
+  color: white;
+  color: #f5f5f5;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 5px 10px;
+  margin-right: 1vw;
+}
+
+.logout-button {
+  position: absolute;
+  color: #f5f5f5;
+  width: 5vw;
+  height: 100%;
+  font-size: 15px;
+  font-weight: 700;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin-left: 94%;
+}
+
+.logout-button:hover {
+  background-color:rgb(39, 182, 39);
+  color: #f5f5f5;
+}
 
