--- a/peer-prep-fe/src/app/create-account/create-account.component.css
+++ b/peer-prep-fe/src/app/create-account/create-account.component.css
@@ -56,6 +56,7 @@ input.ng-valid.ng-touched {
 }
 
 .submit {
+  display: block;
   width: 12vw;
   height: 5vh;
   margin-top: 3vh;
@@ -67,23 +68,11 @@ input.ng-valid.ng-touched {
   border-radius: 0.5rem;
   cursor: pointer;
   font-family: "Signika", sans-serif;
+  z-index: -2;
 }
 
-.create-account {
-  width: 12vw;
-  height: 5vh;
-  font-size: 0.7em;
-  font-weight: 700;
-  border: none;
-  border-radius: 0.5rem;
-  margin-left: 25%;
-  background-color: #f3d009;
-  cursor: pointer;
-  &:hover {
-    color:#f5f5f5;
-  }
-}
 button:disabled {
   background-color: grey;
   cursor: not-allowed;
 }
+
