--- a/peer-prep-fe/src/styles.css
+++ b/peer-prep-fe/src/styles.css
@@ -9,6 +9,7 @@ html, body {
     height: 100%;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-image: url(../assets/background.png);
+    overflow: hidden;
  }
 
 /* src/styles.css or src/styles.scss */
