Create New Problem Backend

--- a/apps/question-service/src/app/styles.scss
+++ b/apps/question-service/src/app/styles.scss
@@ -53,3 +53,12 @@
 .order-select {
   width: 100%;
 }
+
+.create-title,
+.new-problem-categories-multi-select,
+.new-problem-difficulty-select,
+.create-description,
+.create-problem-id {
+  width: 100%;
+  margin: 5px;
+}
