--- a/project/apps/web/app/globals.css
+++ b/project/apps/web/app/globals.css
@@ -46,8 +46,11 @@ h6 {
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
-    --green: 120 100% 25%;
-    --green-foreground: 0 0% 100%;
+    --success: 120 100% 25%;
+    --success-foreground: 0 0% 100%;
+
+    --error: 0 78.4% 47.3%;
+    --error-foreground: 0 75% 98.4%;
 
     --ring: 215 20.2% 65.1%;
 
