Adjust questions header to be aligned with question table

--- a/frontend/src/styles/questions.css
+++ b/frontend/src/styles/questions.css
@@ -6,8 +6,8 @@ h1 {
     font-weight: 600;
     line-height: normal;
     text-align: left;
-    margin-left: 40px;
     margin-top: 20px;
+
 }
 
 .description {
@@ -16,9 +16,13 @@ h1 {
     font-size: 18px;
     font-weight: 400;
     text-align: left;
-    margin-left: 40px;
     margin-top: -10px;
     word-wrap: break-word;
+}
+
+.questions-container {
+    max-width: 1200px;
+    margin: auto;
 }
 
 .question-table-container {
@@ -29,6 +33,6 @@ h1 {
 
 .admin-button {
     position: absolute;
-    top: -80px; /* Adjust as needed */
+    top: -90px; /* Adjust as needed */
     right: 0;
 }
