--- a/peer-prep-fe/src/app/app.component.css
+++ b/peer-prep-fe/src/app/app.component.css
@@ -65,7 +65,7 @@
   position: absolute;
   color: #f5f5f5;
   width: 5vw;
-  height: 100%;
+  height: 5vh;
   font-size: 15px;
   font-weight: 700;
   border: none;
